--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node server.js",
     "dev": "webpack-dev-server --open --config webpack.dev.js -d",
     "build": "webpack --config webpack.prod.js && node server.js",
-    "postbuild": "webpack --config webpack.prod.js && node server.js"
+    "postbuild": "webpack --config webpack.prod.js"
   },
   "author": "dcrandall",
   "license": "ISC",
