Fixing scripts for heroku build

--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "if-env NODE_ENV=production && npm run prod || npm run dev",
+    "start": "node server.js",
     "dev": "webpack-dev-server --open --config webpack.dev.js -d",
-    "prod": "webpack --config webpack.prod.js && node server.js"
+    "prod": "webpack --config webpack.prod.js && node server.js",
+    "postinstall": "node ./ops/heroku-build.js" 
+
   },
   "author": "dcrandall",
   "license": "ISC",
